Decrease title's animation duration to avoid overlapping with top section

--- a/css/style.css
+++ b/css/style.css
@@ -39,10 +39,9 @@ html, body {
 }
 
 .title {
-    font-family: Landon, serif;
-    -webkit-animation: fade-in-down 1.7s ease forwards;
-    -o-animation: fade-in-down 1.7s ease forwards;
-    animation: fade-in-down 1.7s ease forwards;
+    -webkit-animation: fade-in-down 0.7s ease forwards;
+    -o-animation: fade-in-down 0.7s ease forwards;
+    animation: fade-in-down 0.7s ease forwards;
     font-size: 2rem;
 }
 
@@ -120,8 +119,8 @@ html, body {
 @-webkit-keyframes fade-in-down {
     from {
         opacity: 0;
-        -webkit-transform: translateY(-1.65rem);
-        transform: translateY(-1.65rem)
+        -webkit-transform: translateY(-0.65rem);
+        transform: translateY(-0.65rem)
     }
     to {
         opacity: 1;
@@ -133,8 +132,8 @@ html, body {
 @-moz-keyframes fade-in-down {
     from {
         opacity: 0;
-        -webkit-transform: translateY(-1.65rem);
-        transform: translateY(-1.65rem)
+        -webkit-transform: translateY(-0.65rem);
+        transform: translateY(-0.65rem)
     }
     to {
         opacity: 1;
@@ -146,8 +145,8 @@ html, body {
 @keyframes fade-in-down {
     from {
         opacity: 0;
-        -webkit-transform: translateY(-1.65rem);
-        transform: translateY(-1.65rem)
+        -webkit-transform: translateY(-0.65rem);
+        transform: translateY(-0.65rem)
     }
     to {
         opacity: 1;
